[project]
requires-python = "=3.12"

[build-system]
requires = ["setuptools", "wheel", "numpy>=1.15", "Cython>=0.29"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
build-verbosity = 1
skip = ["pp*", "cp36*"]
before-all = "uname -a"
archs = ["auto"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]