[build-system]
requires = ["setuptools", "wheel", "numpy>=1.15", "Cython>=0.29"]

[tool.cibuildwheel]
build = "cp12-*"
build-verbosity = 1
before-all = "uname -a"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]